--- a/index.html
+++ b/index.html
@@ -279,10 +279,17 @@
         ])
        );
 
-
-
       Vue.createApp({
 
+
+        watch: {
+          monsters: {
+            handler(newValue, oldValue) {
+              localStorage.setItem("monsters", JSON.stringify(newValue));
+            },
+            deep: true,
+          },
+        },
 
 
       }).mount("#app");
